j--/tests/fail/BitwiseOr.java
package fail;
public class BitwiseOr {
	public static void main(String[] args) {
		System.out.println("jon" | "mary");
	}
}
